src/test/resources/typeSystemTestModels/valid/classes/NoProtectedOrPrivateTopLevelClass.java
package typeSystemTestModels.valid.classes;

public class NoProtectedOrPrivateTopLevelClass {

  private class A {

  }

  protected class B {

  }

}
