src/test/resources/typeSystemTestModels/invalid/interfaces/InterfaceNoDuplicateModifier.java
/* (c) https://github.com/MontiCore/monticore */

package typeSystemTestModels.invalid.interfaces;

public public interface InterfaceNoDuplicateModifier {

  private private interface A {

  }
}
